# task0611004

./: .gitignore  README.md  pyproject.toml
config/: projects.yaml  rules.yaml  settings.yaml  tasks.yaml
log_inspector/: __init__.py  auth.py  cli.py  config.py  db.py  db_migrations.py  exporter.py  logger.py  plugins.py  scanner.py  scheduler.py
log_inspector/notifier/: __init__.py  base.py  dingtalk_channel.py  dispatcher.py  email_channel.py  webhook_channel.py
log_inspector/parsers/: base.py  nginx.py  node.py  python_log.py
log_inspector/projects/: __init__.py  context.py  manager.py
log_inspector/remote/: __init__.py  base.py  key_manager.py  resolver.py  s3_transport.py  ssh_transport.py
log_inspector/rules/: builtin.py  engine.py
log_inspector/watcher/: __init__.py  display.py  monitor.py  tail.py
plugins/: example_parser.py
tests/: conftest.py  test_config.py  test_exporter.py  test_notifier.py  test_parsers.py  test_projects.py  test_remote.py  test_rules.py  test_scanner.py  test_scheduler.py  test_watcher.py
