[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-inspector"
version = "0.2.0"
description = "本地服务器日志巡检工具"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "apscheduler>=3.10",
    "rich>=13.0",
    "chardet>=5.0",
    "requests>=2.28",
]

[project.optional-dependencies]
remote = ["paramiko>=3.0", "boto3>=1.28"]
all = ["paramiko>=3.0", "boto3>=1.28"]
dev = ["pytest>=7.0", "pytest-cov", "freezegun", "moto>=4.0"]

[project.scripts]
log-inspector = "log_inspector.cli:app"

[tool.setuptools.packages.find]
include = ["log_inspector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
